# my-analysis_tmpsf

./: .gitignore  CLAUDE.md  README.md  analysis.py  analyze_tmpsf_2018.py  pyproject.toml  requirements.txt
.claude/commands/: speckit.analyze.md  speckit.checklist.md  speckit.clarify.md  speckit.constitution.md  speckit.implement.md  speckit.plan.md  speckit.specify.md  speckit.tasks.md
.specify/features/001-ashes-tmpsf-timeseries/: plan.md  spec.md  tasks.md
.specify/memory/: constitution.md
notebooks/: 01_explore_tmpsf.ipynb
outputs/notebooks/: 01_explore_tmpsf.ipynb  README.md  environment.yml
specs/001-ashes-tmpsf-timeseries/: plan.md  spec.md  tasks.md
