[project]
name = "my-analysis-tmpsf"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "dask>=2026.1.1",
    "hvplot>=0.12.2",
    "matplotlib>=3.8",
    "netcdf4>=1.6",
    "numpy>=1.26",
    "pandas>=2.0",
    "papermill>=2.6.0",
    "pyarrow>=14.0",
    "xarray>=2024.0",
]
